testsuite/tests/explicit-dicts/should_fail/NotATypeClassConstraint.stderr

NotATypeClassConstraint.hs:10:5: error:
    • Not a type-class constraint: forall (c :: Constraint). c
    • In the expression: f eqInt Proxy
      In an equation for ‘g’:
          g = f eqInt Proxy
            where
                eqInt :: Eq.Dict Int
                eqInt = Eq.Dict (==) (/=)
